@@ -18,19 +18,27 @@ INCLUDES = 								\
 	$(GTHREAD_CFLAGS)						\
 	$(GLIB2_CFLAGS)			
 
+generated_files = 							\
+	tracker-indexer-glue.h						\
+	tracker-marshal.c						\
+	tracker-marshal.h
+
+$(generated_files):
+	rm -rf $@
+	ln -s $(top_srcdir)/src/tracker-indexer/$@ $@
+
+CLEANFILES = $(generated_files)
 
 tracker_metadata_utils_SOURCES = 					\
+	$(generated_files)						\
 	tracker-dbus.c							\
 	tracker-dbus.h							\
 	tracker-indexer.c						\
 	tracker-indexer.h						\
 	tracker-indexer-db.c						\
 	tracker-indexer-db.h						\
-	tracker-indexer-glue.h						\
 	tracker-indexer-module.c					\
 	tracker-indexer-module.h					\
-	tracker-marshal.c						\
-	tracker-marshal.h						\
 	tracker-metadata.c						\
 	tracker-metadata.h						\
 	tracker-metadata-utils.c 					\
@@ -48,4 +56,3 @@ tracker_metadata_utils_LDADD =	                                        \
 	$(GTHREAD_LIBS)							\
 	$(GIO_LIBS)							\
 	$(GLIB2_LIBS)							
-
